Add test with Mute

--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -34,11 +34,11 @@
     "# local_library = False\n",
     "\n",
     "if local_library : \n",
-    "    da_tran_SQL = imp.load_source('da_tran_SQL', 'py_topping/data_connection/database.py').da_tran_SQL\n",
+    "    lazy_SQL = imp.load_source('lazy_SQL', 'py_topping/data_connection/database.py').lazy_SQL\n",
     "else :\n",
     "    base_cwd = os.getcwd()[:]\n",
     "    os.chdir(os.getcwd().split('\\\\')[0] + '\\\\')\n",
-    "    from py_topping.data_connection.database import da_tran_SQL\n",
+    "    from py_topping.data_connection.database import lazy_SQL\n",
     "    os.chdir(base_cwd)\n",
     "    \n",
     "def help_test(df_in1, df_in2) :\n",
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "print(da_tran_SQL.__doc__)"
+    "print(lazy_SQL.__doc__)"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "\n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_mssql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_mssql['type'],\n",
     "                                host_name = test_mssql['host'],\n",
     "                                database_name = test_mssql['database'],\n",
     "                                user = test_mssql['user'],\n",
@@ -264,7 +264,7 @@
     "\n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_mssql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_mssql['type'],\n",
     "                                host_name = test_mssql['host'],\n",
     "                                database_name = test_mssql['database'],\n",
     "                                user = test_mssql['user'],\n",
@@ -448,7 +448,7 @@
     "\n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_mssql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_mssql['type'],\n",
     "                                host_name = test_mssql['host'],\n",
     "                                database_name = test_mssql['database'],\n",
     "                                user = test_mssql['user'],\n",
@@ -628,7 +628,7 @@
     "    \n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_mysql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_mysql['type'],\n",
     "                                host_name = test_mysql['host'],\n",
     "                                database_name = test_mysql['database'],\n",
     "                                user = test_mysql['user'],\n",
@@ -807,7 +807,7 @@
     "    \n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_mysql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_mysql['type'],\n",
     "                                host_name = test_mysql['host'],\n",
     "                                database_name = test_mysql['database'],\n",
     "                                user = test_mysql['user'],\n",
@@ -981,6 +981,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(lazy_SQL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_gbq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -990,10 +1008,10 @@
     "    \n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_gbq['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_gbq['type'],\n",
     "                                host_name = test_gbq['project_id'],\n",
     "                                database_name = test_gbq['dataset'],\n",
-    "                                credentials = test_gbq['credentials_path'])\n",
+    "                                credentials_path = test_gbq['credentials_path'])\n",
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
@@ -1184,7 +1202,7 @@
     "\n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_postgresql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_postgresql['type'],\n",
     "                                host_name = test_postgresql['host'],\n",
     "                                database_name = test_postgresql['database'],\n",
     "                                user = test_postgresql['user'],\n",
@@ -1363,7 +1381,7 @@
     "\n",
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = test_postgresql['type'],\n",
+    "        self.sql = lazy_SQL(sql_type = test_postgresql['type'],\n",
     "                                host_name = test_postgresql['host'],\n",
     "                                database_name = test_postgresql['database'],\n",
     "                                user = test_postgresql['user'],\n",
@@ -1545,7 +1563,7 @@
    "source": [
     "class SQL_Test_class(unittest.TestCase):\n",
     "    def setUp(self):\n",
-    "        self.sql = da_tran_SQL(sql_type = 'sqlite', \n",
+    "        self.sql = lazy_SQL(sql_type = 'sqlite', \n",
     "                    host_name = 'test.db', \n",
     "                    database_name = '', \n",
     "                    user = '', \n",
@@ -1679,18 +1697,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mute SQLite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class SQL_Test_class(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.sql = lazy_SQL(sql_type = 'sqlite', \n",
+    "                    host_name = 'test.db', \n",
+    "                    database_name = '', \n",
+    "                    user = '', \n",
+    "                    password = '',\n",
+    "                    mute = True)\n",
+    "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        self.table_name = 'unit_test_git'\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
+    "        \n",
+    "    def test_read_sql(self):\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_whole(self):\n",
+    "        self.sql.dump_whole(self.df2, self.table_name)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df2\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    \n",
+    "    def test_replace1(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace1_str(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = 'col1')\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace2(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,4,5,6,7,8] , 'col2' : [1,1,2,2,3,3,4,4,5] , 'col3' : [1,1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace3(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_logic(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'],\n",
+    "                             math_logic = {'col1' : {'logic' : '>', 'value' : 1}})\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1[self.df1['col1'] <= 1].append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace3(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new1_str(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = 'col1')\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,2,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new1(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,2,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_new2(self) :\n",
+    "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2'], debug = False)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,4,6,7,8] , 'col2' : [1,1,2,2,3,3,4,4,5] , 'col3' : [1,1,1,1,1,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_null1(self) :\n",
+    "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1'] , debug = False)\n",
+    "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
+    "        expect_df = pd.DataFrame({'col1' : [1,3,4,5,6,7,None] , 'col2' : [1,2,3,3,4,4,5] , 'col3' : [1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read.fillna(99), expect_df.fillna(99))\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "    def test_replace_null2(self) :\n",
+    "        df1_n = pd.DataFrame({'col1' : [1,None,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
+    "        df2_n = pd.DataFrame({'col1' : [4,5,6,7,None] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
+    "        df1_n.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.dump_replace(df_in = df2_n , table_name_in = self.table_name, list_key = ['col1','col2'] , debug = False)\n",
+    "        df_read = self.sql.read(self.table_name).sort_values('col1').reset_index(drop = True)\n",
+    "        expect_df = pd.DataFrame({ 'col1' : [1,None,3,4,4,5,6,7,None] , 'col2' : [1,1,2,2,3,3,4,4,5] \n",
+    "                                  ,'col3' : [1,1,1,1,2,2,2,2,2]}).sort_values('col1').reset_index(drop = True)\n",
+    "\n",
+    "        result, expect = help_test(df_read.fillna(99), expect_df.fillna(99))\n",
+    "        self.assertEqual(result, expect)\n",
+    "\n",
+    "unittest.main(argv = ['first-arg-is-ignored'], exit = False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1704,7 +1864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
