Change sample's function name to new name

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -56,7 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with da_tran_SQL "
+    "# Working with lazy_SQL \n",
+    "Change from da_tran_SQL since 0.3.11"
    ]
   },
   {
@@ -65,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.database import da_tran_SQL"
+    "from py_topping.data_connection.database import lazy_SQL"
    ]
   },
   {
@@ -114,7 +115,7 @@
     }
    ],
    "source": [
-    "mssql = da_tran_SQL(sql_type = 'MSSQL', #set_mssql['type'], #\n",
+    "mssql = lazy_SQL(sql_type = 'MSSQL', #set_mssql['type'], #\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mssql['host'], #\n",
     "                database_name = '{Your Database Name}', #set_mssql['database'], #\n",
     "                user = '{Your Username}', #set_mssql['user'], #\n",
@@ -147,13 +148,37 @@
     }
    ],
    "source": [
-    "mssql = da_tran_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
+    "mssql = lazy_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mssql['host'],\n",
     "                database_name = '{Your Database Name}', #set_mssql['database'],\n",
     "                user = '{Your Username}', #set_mssql['user'],\n",
     "                password = '{Your Password}',#set_mssql['password'])\n",
     "                port = '1433',\n",
     "                driver = 'pymssql')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**from version 0.3.13**<br>\n",
+    "You can mute with parameter \"mute\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mssql = lazy_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
+    "                host_name = '{YOUR HOST NAME or ID Address}', #set_mssql['host'],\n",
+    "                database_name = '{Your Database Name}', #set_mssql['database'],\n",
+    "                user = '{Your Username}', #set_mssql['user'],\n",
+    "                password = '{Your Password}',#set_mssql['password'])\n",
+    "                port = '1433',\n",
+    "                driver = 'pymssql',\n",
+    "                mute = True )"
    ]
   },
   {
@@ -178,7 +203,7 @@
     }
    ],
    "source": [
-    "mssql = da_tran_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
+    "mssql = lazy_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mssql['host'],\n",
     "                database_name = '{Your Database Name}', #set_mssql['database'],\n",
     "                user = '{Your Username}', #set_mssql['user'],\n",
@@ -193,7 +218,7 @@
    "metadata": {},
    "source": [
     "**from version >= 0.1.9**<br>\n",
-    "You could fine tune insert's speed by adjust these parameters into the da_tran_SQL class :\n",
+    "You could fine tune insert's speed by adjust these parameters into the lazy_SQL class :\n",
     "- chunksize, chunksize parameter in pandas' to_sql method (Default Value 150)\n",
     "- partition_size,  dataframe will divide into smaller size as partition_size before dump (Default Value 5,000)\n",
     "- parallel_dump, to activate parallel dump (Default Value False) **Risk, not recommend to use**\n",
@@ -214,7 +239,7 @@
     }
    ],
    "source": [
-    "mssql = da_tran_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
+    "mssql = lazy_SQL(sql_type = 'MSSQL', #set_mssql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mssql['host'],\n",
     "                database_name = '{Your Database Name}', #set_mssql['database'],\n",
     "                user = '{Your Username}', #set_mssql['user'],\n",
@@ -231,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The da_tran_SQL class also has engine method which equal to engine in sqlalchemy\n",
+    "The lazy_SQL class also has engine method which equal to engine in sqlalchemy\n",
     "\n",
     "Which I'm going to use it to set up sample environment that include,\n",
     " * 2 dataframe\n",
@@ -2719,7 +2744,7 @@
     }
    ],
    "source": [
-    "mysql = da_tran_SQL(sql_type = 'MYSQL', #set_mysql['type'],\n",
+    "mysql = lazy_SQL(sql_type = 'MYSQL', #set_mysql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mysql['host'],\n",
     "                database_name = '{Your Database Name}', #set_mysql['database'],\n",
     "                user = '{Your Username}', #set_mysql['user'],\n",
@@ -2751,7 +2776,7 @@
     }
    ],
    "source": [
-    "mysql = da_tran_SQL(sql_type = 'MYSQL', #set_mysql['type'],\n",
+    "mysql = lazy_SQL(sql_type = 'MYSQL', #set_mysql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_mysql['host'],\n",
     "                database_name = '{Your Database Name}', #set_mysql['database'],\n",
     "                user = '{Your Username}', #set_mysql['user'],\n",
@@ -2813,7 +2838,7 @@
     }
    ],
    "source": [
-    "gbq = da_tran_SQL(sql_type = 'bigquery', #set_bgq['type'], #\n",
+    "gbq = lazy_SQL(sql_type = 'bigquery', #set_bgq['type'], #\n",
     "                host_name = '{YOUR Project ID}', #set_bgq['project_id'], #\n",
     "                database_name = '{Your Dataset Name}') #set_bgq['dataset']) #"
    ]
@@ -2845,7 +2870,7 @@
     }
    ],
    "source": [
-    "gbq = da_tran_SQL(sql_type = 'bigquery', #set_bgq['type'],\n",
+    "gbq = lazy_SQL(sql_type = 'bigquery', #set_bgq['type'],\n",
     "                host_name = '{YOUR Project ID}', #set_bgq['project_id'], #\n",
     "                database_name = '{Your Dataset Name}', #set_bgq['dataset'], #\n",
     "                credentials_path = '{Path to Credentials file (JSON)}') #set_bgq['credentials_path']) #"
@@ -2907,7 +2932,7 @@
     }
    ],
    "source": [
-    "plsql = da_tran_SQL(sql_type = 'POSTGRESQL', #set_plsql['type'],\n",
+    "plsql = lazy_SQL(sql_type = 'POSTGRESQL', #set_plsql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_plsql['host'],\n",
     "                database_name = '{Your Database Name}', #set_plsql['database'],\n",
     "                user = '{Your Username}', #set_plsql['user'],\n",
@@ -2939,7 +2964,7 @@
     }
    ],
    "source": [
-    "plsql = da_tran_SQL(sql_type = 'POSTGRESQL', #set_plsql['type'],\n",
+    "plsql = lazy_SQL(sql_type = 'POSTGRESQL', #set_plsql['type'],\n",
     "                host_name = '{YOUR HOST NAME or ID Address}', #set_plsql['host'],\n",
     "                database_name = '{Your Database Name}', #set_plsql['database'],\n",
     "                user = '{Your Username}', #set_plsql['user'],\n",
@@ -2977,7 +3002,7 @@
     }
    ],
    "source": [
-    "sqlite = da_tran_SQL(sql_type = 'sqlite', \n",
+    "sqlite = lazy_SQL(sql_type = 'sqlite', \n",
     "                    host_name = '{path to database file}', #'test.db', \n",
     "                    database_name = '', \n",
     "                    user = '', \n",
