--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Import Library\n",
     "\n",
-    " - ```pip install google-cloud-storage```<br> "
+    " - ```pip install google-cloud-storage```<br> \n",
+    " <br>change from da_tran_bucket since 0.3.11"
    ]
   },
   {
@@ -17,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.database import da_tran_bucket"
+    "from py_topping.data_connection.database import lazy_GCS"
    ]
   },
   {
@@ -35,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gcs = da_tran_bucket(project_id = '{Your Project ID}'\n",
+    "gcs = lazy_GCS(project_id = '{Your Project ID}'\n",
     "                     , bucket_name = '{Your Bucket Name}'\n",
     "                     ,credential = '{Path to Your Credential Json File (Optional)}')"
    ]
