--- a/samples/sharepoint.ipynb
+++ b/samples/sharepoint.ipynb
@@ -32,7 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with da_tran_SP365"
+    "# Working with lazy_SP365\n",
+    "change from da_tran_SP365 in 0.3.11"
    ]
   },
   {
@@ -41,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.sharepoint import da_tran_SP365"
+    "from py_topping.data_connection.sharepoint import lazy_SP365"
    ]
   },
   {
@@ -75,7 +76,7 @@
     }
    ],
    "source": [
-    "sp = da_tran_SP365(set_sp365['url'], user = set_sp365['user'], password = set_sp365['password'])"
+    "sp = lazy_SP365(set_sp365['url'], user = set_sp365['user'], password = set_sp365['password'])"
    ]
   },
   {
@@ -101,7 +102,7 @@
     }
    ],
    "source": [
-    "sp = da_tran_SP365(set_sp365['url'], client_id = set_sp365['cli_id'], client_secret = set_sp365['cli_secret'])"
+    "sp = lazy_SP365(set_sp365['url'], client_id = set_sp365['cli_id'], client_secret = set_sp365['cli_secret'])"
    ]
   },
   {
@@ -517,7 +518,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with da_tran_SP_PRIM"
+    "# Working with lazy_SP_PRIM\n",
+    "change from da_tran_SP_PRIM in 0.3.11"
    ]
   },
   {
@@ -526,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.sharepoint import da_tran_SP_PRIM"
+    "from py_topping.data_connection.sharepoint import lazy_SP_PRIM"
    ]
   },
   {
@@ -551,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp_p = da_tran_SP_PRIM(set_sp_p['user'], set_sp_p['password'])"
+    "sp_p = lazy_SP_PRIM(set_sp_p['user'], set_sp_p['password'])"
    ]
   },
   {
