Add sample of timeout function

--- a/samples/other_function.ipynb
+++ b/samples/other_function.ipynb
@@ -225,6 +225,67 @@
     "health['hostname'], health['hostip'] = [''] , [''] # delete my machine name\n",
     "health"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f8e1556",
+   "metadata": {},
+   "source": [
+    "# timeout\n",
+    "\n",
+    "Set timeout for your python fuction,<br>\n",
+    "refer from this link : https://stackoverflow.com/questions/21827874/timeout-a-function-windows \n",
+    "\n",
+    "**Not working with IPython like Jupyter / Spyder**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25e38203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "timeout\n"
+     ]
+    }
+   ],
+   "source": [
+    "from py_topping.general_use import timeout\n",
+    "import time\n",
+    "\n",
+    "def My_Function() :\n",
+    "    for i in range(5) :\n",
+    "        time.sleep(1)\n",
+    "        print(i)\n",
+    "\n",
+    "func = timeout(timeout=2)(My_Function)\n",
+    "try: func()\n",
+    "except: print('timeout')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "191bd2f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use as decoration\n",
+    "@timeout(2)\n",
+    "def My_Function() :\n",
+    "    for i in range(5) :\n",
+    "        time.sleep(1)\n",
+    "        print(i)\n",
+    "\n",
+    "try: My_Function()\n",
+    "except: print('timeout')"
+   ]
   }
  ],
  "metadata": {
@@ -243,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
