Add doc about change default driver of MS SQL or SQL Server into pytds

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "## Load Required Libraries\n",
     "<br> \n",
+    "\n",
     "**Standard Process** <br>\n",
     " - ```pip install pandas```<br>\n",
     " - ```pip install sqlalchemy```<br> \n",
@@ -15,7 +16,9 @@
     " - ```pip install toolz```<br>\n",
     " \n",
     "**SQL Server Driver** <br>\n",
-    " - ```pip install pymssql```\n",
+    " - ```pip install sqlalchemy-pytds```\n",
+    " - ```pip install python-tds```\n",
+    " - or ```pip install pymssql```\n",
     " - or ```pip install pyodbc```<br>\n",
     " \n",
     "**MySQL Driver** <br>\n",
@@ -129,7 +132,8 @@
     "for SQL Server the <b>sql_type must == \"MSSQL\" (ignore case sensitive in version >= 0.1.3)</b>\n",
     "  \n",
     "    \n",
-    "by Default, the class will using pymssql as driver and port 1433\n",
+    "by Default, the class will using <span style=\"color:red\">**pytds**</span>. as driver and port 1433<br>\n",
+    "**change from pymssql to pytds in version >= 0.3.16*\n",
     "    \n",
     "But you could also change them if you want like below"
    ]
