Add sameple of lazy_GCS's signed_url

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -96,7 +96,40 @@
    "outputs": [],
    "source": [
     "gcs.upload(bucket_file = '{Destination + File name you want to upload}'\n",
-    "           , local_file = '{Your local file}')"
+    "           , local_file = '{Your local file}'\n",
+    "           , remove_file = False) # <= If true, remove file from that folder "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da859b6",
+   "metadata": {},
+   "source": [
+    "From version 0.3.17, upload method can also create the signed_url<br><br>\n",
+    "Reference from : \n",
+    "https://github.com/GoogleCloudPlatform/python-docs-samples/tree/e7379a8b33ab29b354292d370c3655f481bf3be5/storage/signed_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f025f1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.upload(bucket_file = '{Destination + File name you want to upload}'\n",
+    "           , local_file = '{Your local file}'\n",
+    "           , remove_file = False # Suggest to set as True for signed url\n",
+    "           , generate_signed_url = True # Set to True to create signed url\n",
+    "           , url_expiration = 60) # Expiration time of the url in second"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57c48b44",
+   "metadata": {},
+   "source": [
+    "Return signed url as a string"
    ]
   },
   {
@@ -117,6 +150,38 @@
     "gcs.upload_folder(bucket_folder = '{Destination folder you want to upload}'\n",
     "                  , local_folder = '{Your local Folder}'\n",
     "                  , remove_file = False) # <= If true, remove file from that folder "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99cca58c",
+   "metadata": {},
+   "source": [
+    "From version 0.3.17, upload_folder method can also create the signed_url<br><br>\n",
+    "Reference from : \n",
+    "https://github.com/GoogleCloudPlatform/python-docs-samples/tree/e7379a8b33ab29b354292d370c3655f481bf3be5/storage/signed_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74afc657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.upload_folder(bucket_folder = '{Destination folder you want to upload}'\n",
+    "                  , local_folder = '{Your local Folder}'\n",
+    "                  , remove_file = False # Suggest to set as True for signed url\n",
+    "                  , generate_signed_url = True # Set to True to create signed url\n",
+    "                  , url_expiration = 60) # Expiration time of the url in second"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d703d1df",
+   "metadata": {},
+   "source": [
+    "Return signed urls as a list of string"
    ]
   }
  ],
