Add sample of random_text function

--- a/samples/other_function.ipynb
+++ b/samples/other_function.ipynb
@@ -286,6 +286,38 @@
     "try: My_Function()\n",
     "except: print('timeout')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adbaeb64",
+   "metadata": {},
+   "source": [
+    "## Random Text\n",
+    "Create random text 'n' characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "85364809",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HpLZ8l6mdeSwg24'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from py_topping.general_use import random_text\n",
+    "\n",
+    "random_text(15)"
+   ]
   }
  ],
  "metadata": {
