Add detail about permissions needed for each function

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -46,7 +46,11 @@
    "id": "abroad-physics",
    "metadata": {},
    "source": [
-    "# Download Single File"
+    "# Download Single File\n",
+    "\n",
+    "Need 2 permissions \n",
+    "- Storage Legacy Object Reader\n",
+    "- Storage Legacy Bucket Writer "
    ]
   },
   {
@@ -65,7 +69,10 @@
    "id": "ambient-crime",
    "metadata": {},
    "source": [
-    "# Download Whole Folder"
+    "# Download Whole Folder\n",
+    "Need 2 permissions \n",
+    "- Storage Legacy Object Reader\n",
+    "- Storage Legacy Bucket Writer "
    ]
   },
   {
@@ -85,7 +92,8 @@
    "id": "agricultural-symphony",
    "metadata": {},
    "source": [
-    "# Upload File"
+    "# Upload File\n",
+    "Need a permissions : Storage Legacy Bucket Writer "
    ]
   },
   {
@@ -137,7 +145,8 @@
    "id": "09237d10",
    "metadata": {},
    "source": [
-    "# Upload Folder"
+    "# Upload Folder\n",
+    "Need a permissions : Storage Legacy Bucket Writer "
    ]
   },
   {
