Add new functions in sample of lazy_GCS

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -43,6 +43,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "724cd2a6",
+   "metadata": {},
+   "source": [
+    "## List File in Bucket\n",
+    "To get a list of files, folders or both"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b2e656f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.list_folder(\n",
+    "                  bucket_folder = '{Your Folder Name}'\n",
+    "                , as_blob = False # If False : return as name\n",
+    "                , include_self= False # If True : also return bucket_folder\n",
+    "                , get_file = True # Get files in a list or not\n",
+    "                , get_folder = False # Get Folder in a list or not, not include bucket_folder\n",
+    "                , all_file = False # If True : Will get all files from folder and sub-folder(s)\n",
+    "               )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abroad-physics",
    "metadata": {},
    "source": [
@@ -191,6 +217,44 @@
    "metadata": {},
    "source": [
     "Return signed urls as a list of string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bcb03e",
+   "metadata": {},
+   "source": [
+    "## Delete File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95582995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.delete(bucket_file = '{Destination File you want to delete}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26cd57dc",
+   "metadata": {},
+   "source": [
+    "## Delete Folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3341c93f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.delete_folder(  bucket_folder = '{Destination Folder you want to delete}'\n",
+    "                  , delete_folder = False # Delete Bucket Folder or not\n",
+    "                  , deep_delete = False) # Delete all files in sub-folder(s) or not"
    ]
   }
  ],
