--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -5,9 +5,11 @@
    "id": "inner-guatemala",
    "metadata": {},
    "source": [
-    "# Import Library\n",
+    "# Install Dependencies\n",
     "\n",
     " - ```pip install google-cloud-storage```<br> \n",
+    "\n",
+    " # Import Library\n",
     " <br>change from da_tran_bucket since 0.3.11"
    ]
   },
@@ -18,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from py_topping.data_connection.database import lazy_GCS"
+    "from py_topping.data_connection.gcp import lazy_GCS"
    ]
   },
   {
