Correct GCP's Sample Notebook

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -9,8 +9,8 @@
     "\n",
     " - ```pip install google-cloud-storage```<br> \n",
     "\n",
-    " # Import Library\n",
-    " <br>change from da_tran_bucket since 0.3.11"
+    "# Import Library\n",
+    "change from da_tran_bucket since 0.3.11"
    ]
   },
   {
