Formatting Test and Sample

--- a/tests/gcp.ipynb
+++ b/tests/gcp.ipynb
@@ -2,21 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First Directory at : \\D02_Dev_Fun\\Shared_Function\\tests\n",
-      "Load Setting OK\n",
-      "Change Directory into : \\D02_Dev_Fun\\Shared_Function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re,json, imp, unittest\n",
     "from glob import glob\n",
@@ -39,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +37,11 @@
     "# local_library = False\n",
     "\n",
     "if local_library : \n",
-    "    da_tran_bucket = imp.load_source('da_tran_bucket', 'py_topping/data_connection/gcp.py').da_tran_bucket\n",
+    "    lazy_GCS = imp.load_source('lazy_gcs', 'py_topping/data_connection/gcp.py').lazy_GCS\n",
     "else :\n",
     "    base_cwd = os.getcwd()[:]\n",
     "    os.chdir(os.getcwd().split('\\\\')[0] + '\\\\')\n",
-    "    from py_topping.data_connection.gcp import da_tran_bucket\n",
+    "    from py_topping.data_connection.gcp import lazy_GCS\n",
     "    os.chdir(base_cwd)"
    ]
   },
@@ -64,38 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "...\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 8.489s\n",
-      "\n",
-      "OK\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<unittest.main.TestProgram at 0x22688245cd0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gcs_setting = setting['gcs']\n",
     "\n",
     "class gcs_test(unittest.TestCase):\n",
     "    def setUp(self):\n",
     "        warnings.simplefilter(\"ignore\")\n",
-    "        self.gcs = da_tran_bucket(project_id = gcs_setting[\"project_id\"]\n",
+    "        self.gcs = lazy_gcs(project_id = gcs_setting[\"project_id\"]\n",
     "                     , bucket_name = gcs_setting[\"bucket\"]\n",
     "                     , credential = gcs_setting[\"credentials_path\"])\n",
     "        self.folder = gcs_setting[\"folder\"]\n",
